...
    <string name="explanation_failing_api">The ".doOnRetry()" function updates the textview every time there\'s a timeout error. \n\n The ".retryWhen()" function restarts the api call if there is a timeoutError.</string>
    <string name="explanation_long_load">One Rx Stream does a long api call that takes 4–40 seconds.\n\nThe other stream emits a random number every 3 seconds and sets a loading text based on that.</string>
    <string name="explanation_distinct">Every 200ms, a new random value is emitted, but only values which have not been emitted before get past the filter to the textView. \n\nValues are still being emitted silently right now but get filtered out by distinct()</string>
    <string name="explanation_pin">The .mergeWith() function merges all button clicks into a single stream. \n\n.buffer(4) prevents stream emissions until 4 numbers are entered. \n\n.doOnNext() causes a vibration if any button is clicked</string>
    <string name="explanation_list">A single PublishSubject(String) emits a String 144 times per second. \n\nThis Publisher\'s Observer is passed to the ListAdapter. \n\nThe ListAdapter sets a listener on each individual item, to update the TextView if it gets an emission</string>
    <string name="explanation_bus_list">This class is identical to ListActivity, except it uses an RxBus to act as an EventBus. \n\nAn RxBus is useful in situations where several distantly related classes in different contexts may need to be informed of each update.</string>
    <string name="pin_match_success">PIN MATCHES PREVIOUS</string>

    <string-array name="loading_messages">
        <item>Loading…</item>
        <item>We\'re working on it…</item>
        <item>Things are happening…</item>
        <item>Reticulating splines…</item>
...
